--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -1,18 +1,30 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="app">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title><%= title %></title>
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="/css/app.css">
-  </head>
+      <% include common/head %>
   <body>
+   <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="/">Angular TODO App</a>
+    </div>
+
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li role="presentation"  class="active"><a href="/">Home<span class="sr-only">(current)</span></a></li>
+        <li role="presentation" ><a href="/profile">Profile</a></li>
+        <li role="presentation" ><a href="/logout">Logout</a></li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+  
    <div class="container">
        <ng-view></ng-view>
    </div>
@@ -78,12 +90,6 @@
       
     </script>
     
-    <!-- JavaScript Section -->
-    <script src="/Scripts/lib/jquery.min.js"></script>
-    <script src="/Scripts/lib/bootstrap.min.js"></script>
-    <script src="/Scripts/lib/angular.min.js"></script>
-    <script src="/Scripts/lib/angular-route.min.js"></script>
-    <script src="/Scripts/lib/angular-resource.min.js"></script>
-    <script src="Scripts/app.js"></script>
+    <% include common/footer %>
   </body>
 </html>
