added github passport oauth strategy

--- a/server/views/profile.ejs
+++ b/server/views/profile.ejs
@@ -34,6 +34,8 @@
                 <h3><span class="fa fa-user"></span> User Details</h3>
                 <p> Welcome - <strong>email</strong>:
                 <%= user.local.email %>
+                <%= user.oauthID %>
+                <%= user.name %>
                 <br>
                 </p>
             </div>
