--- a/server/views/login.ejs
+++ b/server/views/login.ejs
@@ -42,6 +42,7 @@
                 <input id="password" class="form-control" type="password" placeholder="Password" name="password" required>
                 <button type="submit" class="btn btn-lg btn-primary btn-block">Submit</button>
                 <p>Don't have an account? <a href="/register">Register</a></p>
+                <p>Login via <a href="/auth/github">GitHub</a></p>
             </fieldset>
         </form>
           </div>
