updated login and profile views

--- a/server/views/profile.ejs
+++ b/server/views/profile.ejs
@@ -32,10 +32,9 @@
           <div class="panel-body">
             <div class="datails">
                 <h3><span class="fa fa-user"></span> User Details</h3>
-                <p> Welcome - <strong>email</strong>:
+                <p> Welcome - <strong>User</strong>:
                 <%= user.local.email %>
-                <%= user.oauthID %>
-                <%= user.name %>
+                <%= user.github.name %>
                 <br>
                 </p>
             </div>
