--- a/server/views/profile.ejs
+++ b/server/views/profile.ejs
@@ -35,6 +35,7 @@
                 <p> Welcome - <strong>User</strong>:
                 <%= user.local.email %>
                 <%= user.github.name %>
+                <%= user.twitter.name %>
                 <br>
                 </p>
             </div>
