added linkedin oauth passport strategy

--- a/server/views/profile.ejs
+++ b/server/views/profile.ejs
@@ -36,6 +36,7 @@
                 <%= user.local.email %>
                 <%= user.github.name %>
                 <%= user.twitter.name %>
+                <%= user.linkedin.name %>
                 <br>
                 </p>
             </div>
