--- a/server/views/login.ejs
+++ b/server/views/login.ejs
@@ -41,7 +41,7 @@
                 <label for="inputPassword" class="sr-only">Password</label>
                 <input id="password" class="form-control" type="password" placeholder="Password" name="password" required>
                 <button type="submit" class="btn btn-lg btn-primary btn-block">Submit</button>
-                <p>Don't have an account? <br> <a href="/register">Register</a> or <br>Login via <a href="/auth/github">GitHub</a><br>Login via <a href="/auth/twitter">Twitter</a><br>Login via <a href="/auth/twitter">LinkedIn</a></p>
+                <p>Don't have an account? <br> <a href="/register">Register</a> or <br>Login via <a href="/auth/github">GitHub</a><br>Login via <a href="/auth/twitter">Twitter</a><br>Login via <a href="/auth/linkedin">LinkedIn</a></p>
             </fieldset>
         </form>
           </div>
