added google oauth login strategy

--- a/server/views/profile.ejs
+++ b/server/views/profile.ejs
@@ -37,6 +37,7 @@
                 <%= user.github.name %>
                 <%= user.twitter.name %>
                 <%= user.linkedin.name %>
+                <%= user.google.name %>
                 <br>
                 </p>
             </div>
